Skip opacity and unknown components during reading of JPX image data. This improves image quality (compared to the previous state that interpreted an opacity channel as yet another data sample) and serves as a transition to full support of opacity in JPX images. Bug 691489, customer 532.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11637 a1074d23-0009-0410-80fe-cf8c14f379e6